Added analysis of the top earners and their labels

--- a/notebooks/03-airdrop-eda.ipynb
+++ b/notebooks/03-airdrop-eda.ipynb
@@ -1476,6 +1476,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ens             | Amount Claimed:        1,143.54 | Receiver: 0x0904dac3347ea47d208f3fd67402d039a3b99859 | Percentage:  0.006% | Transaction: 57458e828809dc0efa892a507310cc1817151c2f6594edfa7f4a1fa6ab070181 | Total airdrop: 19,632,454.20\n",
+      "dydx            | Amount Claimed:    1,492,217.38 | Receiver: 0xa6159589a0c2449fdb89017abdd43493496d2d92 | Percentage:  0.891% | Transaction: 7c9e8a62b1f1b5dea00cf9321b4020c1ff4ec0f235d72a8d9d081622194a6db4 | Total airdrop: 167,511,962.50\n",
+      "1inch           | Amount Claimed:    9,749,686.00 | Receiver: 0xa0f75491720835b36edc92d06ddc468d201e9b73 | Percentage: 11.656% | Transaction: b9cdd3c726984ce876ade2581a3cf130e5fd4eb9d14a85b157d43e5abf3c155e | Total airdrop: 83,642,822.40\n",
+      "gemstone        | Amount Claimed: 2,639,000,000,000.00 | Receiver: 0xe716b0293abac6ac58f05e2cdfc035e187331da0 | Percentage:  0.005% | Transaction: 0x30a0a9ae9e212126606c29c581d96876e42a6ab82812dcb068352cbcb3d48e39 | Total airdrop: 50,394,775,000,000,000.00\n",
+      "arbitrum        | Amount Claimed:       10,250.00 | Receiver: 0x79f06c6b737b65b800efc87d9e97a90b8bbb2b3f | Percentage:  0.001% | Transaction: 0xe12e4da6ea6674078b9a78ebda4b422f94050aa453e32492dd70aa9defae2ace | Total airdrop: 1,092,811,500.00\n",
+      "optimism        | Amount Claimed:       32,431.80 | Receiver: 0xba740c9035ff3c24a69e0df231149c9cd12bae07 | Percentage:  0.020% | Transaction: 0x39dc59ec07f2d52e3aacd05e9c2cdedb3e4771882ccfc4767d2f19438493a0f4 | Total airdrop: 166,252,055.52\n",
+      "uniswap         | Amount Claimed:    2,103,516.59 | Receiver: 0xdd27fbfd9e2ebc345140542bab7bd4235172c3b3 | Percentage:  1.535% | Transaction: e109065efd962491ba9ae780a6d7e05fd0fcdfbdf066a68ee79027449f121c90 | Total airdrop: 137,040,499.28\n",
+      "arkham          | Amount Claimed:      249,353.40 | Receiver: 0xf0dff6c2c30ba13a2cb43e048fa7f98b1bc38d2f | Percentage:  0.848% | Transaction: 161cbff62dc298ef8083e0373b6619bc8c67ab7a1b1203504400b78c3f5a3629 | Total airdrop: 29,394,517.34\n",
+      "lido            | Amount Claimed:      746,286.49 | Receiver: 0x97960149fc611508748de01202974d372a677632 | Percentage: 18.793% | Transaction: 615e59f5aa5a4c6f29156fe137c9679ca2f2e3bc05ca3f2e76c13f9ef99fb4db | Total airdrop: 3,971,044.80\n",
+      "tornado         | Amount Claimed:      143,831.16 | Receiver: 0x5efda50f22d34f262c29268506c5fa42cb56a1ce | Percentage: 28.766% | Transaction: 57a2a742169870301727d760a1b91613a8407287a5c300800a2cd4bce560c258 | Total airdrop: 500,000.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Analysis of the Top Earners\n",
+    "for protocol in protocols:\n",
+    "    claims = dfs[protocol]['claim'].collect()\n",
+    "\n",
+    "    # Extract top earner and their claimed amount\n",
+    "    top_earner = claims.sort('amount', descending=True).head(1)\n",
+    "    amount_claimed = top_earner['amount'].item()\n",
+    "    receiver = top_earner['receiver'].item()\n",
+    "\n",
+    "    # Calculate total tokens airdropped\n",
+    "    total_tokens_airdroped = claims['amount'].sum()\n",
+    "\n",
+    "    # Calculate percentage claimed by the top earner\n",
+    "    percentage_claimed = 100 * amount_claimed / \\\n",
+    "        total_tokens_airdroped if total_tokens_airdroped != 0 else 0\n",
+    "\n",
+    "    # Print the results\n",
+    "    print(\n",
+    "        f\"{protocol:<15} | Amount Claimed: {amount_claimed:>15,.2f} | Receiver: {receiver:<42} | Percentage: {percentage_claimed:>6.3f}% | Transaction: {top_earner['transactionHash'].item()} | Total airdrop: {total_tokens_airdroped:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
