--- a/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
+++ b/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
@@ -128,7 +128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5b6d6396f32416f87246ec903b20fa4",
+       "model_id": "5bafa03b0d0246e681fff7dacf0ec136",
        "version_major": 2,
        "version_minor": 0
       },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50e4c3c2a63748649013825044451b51",
+       "model_id": "b6a5f7334ea345c590eba3e091bbb6fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d327ea225e6c46d89fa7981cd00d730d",
+       "model_id": "a79a1c9a2a034d0d817689b0dd6c7a9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -344,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8601b66faea4965861853e41e8ae0ce",
+       "model_id": "4ef49d1fdc384dd3bc77972a7dfd811b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "139540065bc243139475c4cbe9d0d921",
+       "model_id": "f7c31a1167ae42fe818c5dc2c154002b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c45b41e8d91446b1965c3553dae2804f",
+       "model_id": "e42eb3cebb3e4b18b21892a18c942c86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -410,7 +410,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9baef35604654f679afb8e9353f66ec0",
+       "model_id": "72ad0f4c5b5e47a78d728f63d581b631",
        "version_major": 2,
        "version_minor": 0
       },
@@ -432,7 +432,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c47cab5ebef04ebb872a3e978dd40369",
+       "model_id": "05384038dc614169b6000a858d7f778c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -454,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e2df84039634fd7bbdc1df64d4a5d7b",
+       "model_id": "3167a602311a4291988301badc96d629",
        "version_major": 2,
        "version_minor": 0
       },
@@ -476,7 +476,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7301450723824c1dad3a5b86260b9999",
+       "model_id": "ba5718e53243429dbe53a9964de47d7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,7 +498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23d40bbe451f4c96b16f813e129a7289",
+       "model_id": "2e34a8dee5524ae981beafd0c1117315",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,7 +532,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31fe20cf78fa4ab79107298024830c05",
+       "model_id": "f847d7c32f204361b8fa52c84d93f15d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -547,16 +547,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The exchange balance for ens is 10710927.815547846\n",
-      "The exchange balance for dydx is 116277337.90959202\n",
-      "The exchange balance for 1inch is 557717062.2673186\n",
+      "The exchange balance for ens is 10710927.815547844\n",
+      "The exchange balance for dydx is 116277337.90959203\n",
+      "The exchange balance for 1inch is 557717062.2673182\n",
       "The exchange balance for gemstone is 291997156478789.5\n",
-      "The exchange balance for arbitrum is 852070646.5485424\n",
-      "The exchange balance for optimism is 242895481.68695226\n",
-      "The exchange balance for uniswap is 79325697.70988522\n",
-      "The exchange balance for arkham is 143835350.31371492\n",
-      "The exchange balance for lido is 155404705.45286745\n",
-      "The exchange balance for tornado is 669218.639701876\n"
+      "The exchange balance for arbitrum is 852070646.5485425\n",
+      "The exchange balance for optimism is 242895481.68695223\n",
+      "The exchange balance for uniswap is 79325697.70988524\n",
+      "The exchange balance for arkham is 143835350.31371495\n",
+      "The exchange balance for lido is 155404705.4528674\n",
+      "The exchange balance for tornado is 669218.6397018762\n"
      ]
     }
    ],
@@ -582,16 +582,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ens 54.557253549245026\n",
-      "dydx 69.41434878805681\n",
-      "1inch 666.7841259259\n",
+      "ens 54.55725354924501\n",
+      "dydx 69.41434878805683\n",
+      "1inch 666.7841259258995\n",
       "gemstone 0.5794195062460137\n",
-      "arbitrum 77.97050511900198\n",
+      "arbitrum 77.970505119002\n",
       "optimism 146.1007389776537\n",
-      "uniswap 57.88485748986844\n",
-      "arkham 489.32713756466757\n",
-      "lido 3913.446293873983\n",
-      "tornado 133.84372794037517\n"
+      "uniswap 57.884857489868445\n",
+      "arkham 489.3271375646676\n",
+      "lido 3913.4462938739816\n",
+      "tornado 133.84372794037523\n"
      ]
     }
    ],
@@ -612,16 +612,16 @@
     {
      "data": {
       "text/plain": [
-       "{'ens': 10710927.815547846,\n",
-       " 'dydx': 116277337.90959202,\n",
-       " '1inch': 557717062.2673186,\n",
+       "{'ens': 10710927.815547844,\n",
+       " 'dydx': 116277337.90959203,\n",
+       " '1inch': 557717062.2673182,\n",
        " 'gemstone': 291997156478789.5,\n",
-       " 'arbitrum': 852070646.5485424,\n",
-       " 'optimism': 242895481.68695226,\n",
-       " 'uniswap': 79325697.70988522,\n",
-       " 'arkham': 143835350.31371492,\n",
-       " 'lido': 155404705.45286745,\n",
-       " 'tornado': 669218.639701876}"
+       " 'arbitrum': 852070646.5485425,\n",
+       " 'optimism': 242895481.68695223,\n",
+       " 'uniswap': 79325697.70988524,\n",
+       " 'arkham': 143835350.31371495,\n",
+       " 'lido': 155404705.4528674,\n",
+       " 'tornado': 669218.6397018762}"
       ]
      },
      "execution_count": 14,
@@ -642,71 +642,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ens: 83.07% | Balance: 16308526.164489243 | Total Claimed: 19632454.199476592\n",
-      "dydx: 41.40% | Balance: 69351276.63937144 | Total Claimed: 167511962.49729607\n",
-      "1inch: 553.95% | Balance: 463337538.947698 | Total Claimed: 83642822.40415813\n",
-      "gemstone: 379.89% | Balance: 1.9144513323931466e+17 | Total Claimed: 5.0394775e+16\n",
-      "arbitrum: 130.23% | Balance: 1423180423.4554534 | Total Claimed: 1092811500.0\n",
-      "optimism: 190.65% | Balance: 316953675.80118835 | Total Claimed: 166252055.5245812\n",
-      "uniswap: 469.24% | Balance: 643052724.2253964 | Total Claimed: 137040499.276982\n",
-      "arkham: 22.83% | Balance: 6709524.2302471185 | Total Claimed: 29394517.342645075\n",
-      "lido: 515.20% | Balance: 20458903.33065314 | Total Claimed: 3971044.797424059\n",
-      "tornado: 82.40% | Balance: 411992.5404550038 | Total Claimed: 500000.00000000006\n"
-     ]
-    }
-   ],
-   "source": [
-    "# General airdrop distribution statistics\n",
-    "for protocol in protocols:\n",
-    "    # Extract unique claimants using lazy operations\n",
-    "    claimant_df = dfs[protocol]['claim'].select(\n",
-    "        pl.col('receiver')).unique().collect()\n",
-    "\n",
-    "    # Filter and aggregate data using lazy operations\n",
-    "    data = (\n",
-    "        dfs[protocol]['transfer']\n",
-    "        .filter(\n",
-    "            (pl.col('sender').is_in(claimant_df['receiver'])) &\n",
-    "            (pl.col('receiver').is_in(exchange_addresses_set))\n",
-    "        )\n",
-    "        .group_by('sender')\n",
-    "        .agg(pl.col('amount').sum().alias('total_sent'))\n",
-    "        .collect()  # Collect the aggregated data\n",
-    "    )\n",
-    "\n",
-    "    # Calculate the balance directly from the aggregated data\n",
-    "    balance = data['total_sent'].sum()\n",
-    "\n",
-    "    # Calculate the total claim amount using lazy evaluation\n",
-    "    total_claim_amount = dfs[protocol]['claim'].select(\n",
-    "        pl.col('amount').sum()).collect().item()\n",
-    "\n",
-    "    # Calculate percentage balance\n",
-    "    percentage_balance = (balance / total_claim_amount) * 100\n",
-    "\n",
-    "    # Output\n",
-    "    print(f\"{protocol}: {percentage_balance:.2f}% | Balance: {balance} | Total Claimed: {total_claim_amount}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "ens: 46.74% | Balance: 9175886.608028274 | Total Claimed: 19632454.199476592\n",
       "dydx: 13.56% | Balance: 22708853.8403148 | Total Claimed: 167511962.49729607\n",
-      "1inch: 58.67% | Balance: 49077174.96056066 | Total Claimed: 83642822.40415813\n",
-      "gemstone: 95.01% | Balance: 4.7880906248786376e+16 | Total Claimed: 5.0394775e+16\n",
-      "arbitrum: 28.64% | Balance: 312937356.2013145 | Total Claimed: 1092811500.0\n",
-      "optimism: 48.21% | Balance: 80151352.89150001 | Total Claimed: 166252055.5245812\n",
-      "uniswap: 43.69% | Balance: 59878693.30759991 | Total Claimed: 137040499.276982\n",
-      "arkham: 19.79% | Balance: 5818423.308377025 | Total Claimed: 29394517.342645075\n",
+      "1inch: 58.67% | Balance: 49077174.96056065 | Total Claimed: 83642822.40415813\n",
+      "gemstone: 95.01% | Balance: 4.788090624878638e+16 | Total Claimed: 5.0394775e+16\n",
+      "arbitrum: 28.64% | Balance: 312937356.20131445 | Total Claimed: 1092811500.0\n",
+      "optimism: 48.21% | Balance: 80151352.8915 | Total Claimed: 166252055.5245812\n",
+      "uniswap: 43.69% | Balance: 59878693.30759989 | Total Claimed: 137040499.276982\n",
+      "arkham: 19.79% | Balance: 5818423.308377024 | Total Claimed: 29394517.342645075\n",
       "lido: 65.75% | Balance: 2610834.1729569724 | Total Claimed: 3971044.797424059\n",
-      "tornado: 33.71% | Balance: 168571.85945653016 | Total Claimed: 500000.00000000006\n"
+      "tornado: 33.71% | Balance: 168571.8594565302 | Total Claimed: 500000.00000000006\n"
      ]
     }
    ],
@@ -729,7 +674,8 @@
     "    balance = (\n",
     "        data\n",
     "        .select(['sender', 'amount'])\n",
-    "        .unique(subset=['sender'])  # Ensure each sender is counted once\n",
+    "        # Ensure each sender is counted once\n",
+    "        .unique(subset=['sender'], keep='first', maintain_order=True)\n",
     "        .select(pl.col('amount').cast(pl.Float64)).sum()\n",
     "        .collect()\n",
     "        .item()\n",
