--- a/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
+++ b/notebooks/04-airdrop-token-sold-at-exchanges.ipynb
@@ -11,20 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "polars.config.Config"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Standard Library Imports\n",
     "import os\n",
@@ -34,7 +23,9 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "# Polars Configuration\n",
-    "pl.Config.set_float_precision(18)"
+    "pl.Config.set_float_precision(18)\n",
+    "\n",
+    "from utils_plot import percentiles"
    ]
   },
   {
